--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mysql": "^2.13.0"
+  },
+  "devDependencies": {
+    "sqlite3": "^3.1.8"
   }
 }
