--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mysql": "^2.13.0"
+    "express-handlebars": "^3.0.0",
+    "method-override": "^2.3.8",
+    "pg": "^6.1.5",
+    "sequelize": "^3.30.4"
   },
   "devDependencies": {
     "sqlite3": "^3.1.8"
